<resources>
    <string name="app_name">SecuritySolution</string>
    <string name="greeting_login">С возвращением!</string>
    <string name="username_field_hint">Username</string>
    <string name="password_field_hint">Password</string>
    <string name="login_btn_hint">Войти</string>
    <string name="reset_password_hint">Забыли пароль?</string>
    <string name="no_account_hint">У меня нет аккаунта</string>
    <string name="reg_btn_hint">Зарегистрироваться</string>
    <string name="greeting_reg">Регистрация</string>
    <string name="input_field_first_name_label">Имя</string>
    <string name="input_field_first_name_hint">Введите ваше имя</string>
    <string name="input_field_last_name_label">Фамилия</string>
    <string name="input_field_last_name_hint">Введите фамилию</string>
    <string name="input_field_username_label">Имя пользователя</string>
    <string name="input_field_username_hint">Введите имя пользователя</string>
    <string name="input_field_phone_label">Номер телефона</string>
    <string name="input_field_phone_hint">Введите номер телефона</string>
    <string name="input_field_password_label">Пароль</string>
    <string name="input_field_password_hint">Придумайте пароль</string>
    <string name="input_field_confirm_password_label">Подтверждение пароля</string>
    <string name="input_field_confirm_password_hint">Пароль</string>
    <string name="login_hint_reg">У вас уже есть аккаунт? Войти</string>
    <string name="greeting_home">Добро пожаловать!</string>
    <string name="greeting_home_objects">Находите свои объекты</string>
    <string name="input_field_object_search">Введите название объекта</string>
    <string name="nav_item_home_hint">Домашняя</string>
    <string name="nav_item_new_hint">Новый</string>
    <string name="nav_item_notifications_hint">Уведомления</string>
    <string name="nav_item_logout_hint">Выйти</string>
    <string name="greeting_profile">Профиль</string>
    <string name="profile_cancel">Отмена</string>
    <string name="change_photo_profile">Изменить фотографию профиля</string>
    <string name="input_field_fullname_label">Имя и фамилия</string>
    <string name="input_field_fullname_hint">John Smith</string>
    <string name="profile_input_field_phone_hint">+79100000000</string>
    <string name="save_changes_button">Сохранить изменения</string>
    <string name="greeting_object_card">Предприятие общепита</string>
    <string name="input_field_object_name_label">Название объекта</string>
    <string name="input_field_object_name_hint">Предприятие общепита</string>
    <string name="input_field_object_address_label">Адрес объекта</string>
    <string name="input_field_object_address_hint">Россия, г. Краснодар, ул. Красная, д. 0, к. 1</string>
    <string name="input_field_object_address_cams_host_label">Адрес хоста камер видеонаблюдения</string>
    <string name="input_field_object_address_cams_host_hint">127.0.0.1:9034</string>
    <string name="create_object_button">Создать объект</string>
    <string name="object_card_enter_hint">Подробнее</string>
    <string name="watch_cams_object_hint">Смотреть камеры</string>
</resources>